# fast-base

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 15adb3cf0a92_init.py  297b91110fd0_init.py  a75f8f582cca_renames.py
app/: api.py  main.py  pre_start.py
app/api/middleware/: security.py
app/api/v1/: router.py
app/core/: config.py  id.py  logging.py
app/db/: __init__.py  connection.py  models.py
app/routes/v1/: router.py
app/routes/v1/endpoints/: health.py
app/tests/api_v1/: test_health.py
app/tests/core/: test_id.py
